analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BARRAINVERTIDA
    COMILLAS
    COMMENTBLOCK
    NULL

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir PUNTOCOMA
Rule 5     instruccion -> declaracion PUNTOCOMA
Rule 6     instruccion -> asignacion PUNTOCOMA
Rule 7     instruccion -> if_instr
Rule 8     instruccion -> if_else_instr
Rule 9     instruccion -> if_elseif_instr
Rule 10    instruccion -> if_elseif_else_instr
Rule 11    instruccion -> for_instr
Rule 12    instruccion -> while_instr
Rule 13    instruccion -> switch_instr
Rule 14    instruccion -> llamada_funcion_nativa PUNTOCOMA
Rule 15    instruccion -> funcion_instr
Rule 16    instruccion -> call_funcion_instr PUNTOCOMA
Rule 17    instruccion -> interface_instr
Rule 18    instruccion -> delaracion_struct
Rule 19    instruccion -> return_instr
Rule 20    instruccion -> break_instr
Rule 21    instruccion -> continue_instr
Rule 22    tipodeclaracion -> LET
Rule 23    tipodeclaracion -> VAR
Rule 24    tipodeclaracion -> CONST
Rule 25    lista_corchetes -> lista_corchetes CORCHETEI CORCHETED
Rule 26    lista_corchetes -> CORCHETEI CORCHETED CORCHETEI CORCHETED
Rule 27    tipovar -> NUMBER
Rule 28    tipovar -> FLOAT
Rule 29    tipovar -> STRING
Rule 30    tipovar -> BOOLEAN
Rule 31    tipovar -> CHAR
Rule 32    tipovar -> NUMBER CORCHETEI CORCHETED
Rule 33    tipovar -> FLOAT CORCHETEI CORCHETED
Rule 34    tipovar -> STRING CORCHETEI CORCHETED
Rule 35    tipovar -> BOOLEAN CORCHETEI CORCHETED
Rule 36    tipovar -> CHAR CORCHETEI CORCHETED
Rule 37    tipovar -> NUMBER lista_corchetes
Rule 38    tipovar -> FLOAT lista_corchetes
Rule 39    tipovar -> STRING lista_corchetes
Rule 40    tipovar -> BOOLEAN lista_corchetes
Rule 41    tipovar -> CHAR lista_corchetes
Rule 42    imprimir -> CONSOLE PUNTO LOG PARENI listaExpresiones PAREND
Rule 43    listaExpresiones -> listaExpresiones COMA expresion
Rule 44    listaExpresiones -> expresion
Rule 45    arraylist -> CORCHETEI listaExpresiones CORCHETED
Rule 46    arraylist -> CORCHETEI CORCHETED
Rule 47    expresion -> arraylist
Rule 48    declaracion -> tipodeclaracion ID DOSPUNTOS tipovar IGUAL expresion
Rule 49    declaracion -> tipodeclaracion ID IGUAL expresion
Rule 50    declaracion -> tipodeclaracion ID DOSPUNTOS tipovar
Rule 51    asignacion -> ID IGUAL expresion
Rule 52    asignacion -> ID CORCHETEI expresion CORCHETED IGUAL expresion
Rule 53    asignacion -> ID pos_matriz IGUAL expresion
Rule 54    asignacion -> ID AUMENTO expresion
Rule 55    asignacion -> ID DECREMENTO expresion
Rule 56    listaIf -> listaIf elseIF
Rule 57    listaIf -> elseIF
Rule 58    elseIF -> ELSE if_instr
Rule 59    if_instr -> IF PARENI expresion PAREND LLAVEI instrucciones LLAVED
Rule 60    if_else_instr -> IF PARENI expresion PAREND LLAVEI instrucciones LLAVED ELSE LLAVEI instrucciones LLAVED
Rule 61    if_elseif_instr -> IF PARENI expresion PAREND LLAVEI instrucciones LLAVED listaIf
Rule 62    if_elseif_else_instr -> IF PARENI expresion PAREND LLAVEI instrucciones LLAVED listaIf ELSE LLAVEI instrucciones LLAVED
Rule 63    actualizacion -> ID INCREMENTOFOR
Rule 64    actualizacion -> ID DECREMENTOFOR
Rule 65    for_instr -> FOR PARENI declaracion PUNTOCOMA expresion PUNTOCOMA actualizacion PAREND LLAVEI instrucciones LLAVED
Rule 66    for_instr -> FOR PARENI tipodeclaracion ID OF ID PAREND LLAVEI instrucciones LLAVED
Rule 67    while_instr -> WHILE PARENI expresion PAREND LLAVEI instrucciones LLAVED
Rule 68    listaCases -> listaCases case
Rule 69    listaCases -> case
Rule 70    case -> CASE expresion DOSPUNTOS instrucciones
Rule 71    case -> DEFAULT DOSPUNTOS instrucciones
Rule 72    switch_instr -> SWITCH PARENI expresion PAREND LLAVEI listaCases LLAVED
Rule 73    nativa_sin_parametros -> POP PARENI PAREND
Rule 74    nativa_sin_parametros -> JOIN PARENI PAREND
Rule 75    nativa_sin_parametros -> TSTRING PARENI PAREND
Rule 76    nativa_sin_parametros -> LC PARENI PAREND
Rule 77    nativa_sin_parametros -> UC PARENI PAREND
Rule 78    nativa_sin_parametros -> LENGTH
Rule 79    llamada_funcion_nativa -> PUSH
Rule 80    llamada_funcion_nativa -> INDEXOF
Rule 81    llamada_funcion_nativa -> expresion PUNTO nativa_sin_parametros
Rule 82    llamada_funcion_nativa -> expresion PUNTO llamada_funcion_nativa PARENI listaExpresiones PAREND
Rule 83    llamada_funcion_nativa -> TYPEOF expresion
Rule 84    expresion -> llamada_funcion_nativa
Rule 85    expresion -> TOINT PARENI expresion PAREND
Rule 86    expresion -> TOFLOAT PARENI expresion PAREND
Rule 87    parametros_funcion -> parametros_funcion COMA parametro_funcion
Rule 88    parametros_funcion -> parametro_funcion
Rule 89    parametro_funcion -> ID DOSPUNTOS tipovar
Rule 90    parametro_funcion -> ID DOSPUNTOS tipovar CORCHETEI CORCHETED
Rule 91    call_funcion_instr -> ID PARENI PAREND
Rule 92    call_funcion_instr -> ID PARENI listaExpresiones PAREND
Rule 93    funcion_instr -> FUNCTION ID PARENI parametros_funcion PAREND LLAVEI instrucciones LLAVED
Rule 94    funcion_instr -> FUNCTION ID PARENI PAREND LLAVEI instrucciones LLAVED
Rule 95    funcion_instr -> FUNCTION ID PARENI parametros_funcion PAREND DOSPUNTOS tipovar LLAVEI instrucciones LLAVED
Rule 96    funcion_instr -> FUNCTION ID PARENI PAREND DOSPUNTOS tipovar LLAVEI instrucciones LLAVED
Rule 97    interface_instr -> INTERFACE ID LLAVEI interface_params PUNTOCOMA LLAVED
Rule 98    interface_params -> interface_params PUNTOCOMA ID DOSPUNTOS tipovar
Rule 99    interface_params -> ID DOSPUNTOS tipovar
Rule 100   delaracion_struct -> expresion PUNTO expresion IGUAL expresion PUNTOCOMA
Rule 101   expresion -> expresion PUNTO expresion
Rule 102   return_instr -> RETURN expresion PUNTOCOMA
Rule 103   return_instr -> RETURN PUNTOCOMA
Rule 104   break_instr -> BREAK PUNTOCOMA
Rule 105   continue_instr -> CONTINUE PUNTOCOMA
Rule 106   expresion -> call_funcion_instr
Rule 107   expresion -> expresion MAS expresion
Rule 108   expresion -> expresion MENOS expresion
Rule 109   expresion -> expresion POR expresion
Rule 110   expresion -> expresion DIVIDIDO expresion
Rule 111   expresion -> expresion MOD expresion
Rule 112   expresion -> expresion MENORQ expresion
Rule 113   expresion -> expresion MAYORQ expresion
Rule 114   expresion -> expresion MAYORIGUALQ expresion
Rule 115   expresion -> expresion MENORIGUALQ expresion
Rule 116   expresion -> expresion IGUALIGUAL expresion
Rule 117   expresion -> expresion DIFERENTE expresion
Rule 118   expresion -> expresion AND expresion
Rule 119   expresion -> expresion OR expresion
Rule 120   expresion -> NOT expresion
Rule 121   expresion -> PARENI expresion PAREND
Rule 122   expresion -> ENTERO
Rule 123   expresion -> DECIMAL
Rule 124   expresion -> FALSE
Rule 125   expresion -> TRUE
Rule 126   expresion -> CADENA
Rule 127   expresion -> CARACTER
Rule 128   expresion -> ID
Rule 129   expresion -> VACIO
Rule 130   pos_matriz -> pos_matriz CORCHETEI expresion CORCHETED
Rule 131   pos_matriz -> CORCHETEI expresion CORCHETED CORCHETEI expresion CORCHETED
Rule 132   expresion -> ID pos_matriz
Rule 133   expresion -> ID CORCHETEI expresion CORCHETED
Rule 134   expresion -> MENOS expresion

Terminals, with rules where they appear

AND                  : 118
AUMENTO              : 54
BARRAINVERTIDA       : 
BOOLEAN              : 30 35 40
BREAK                : 104
CADENA               : 126
CARACTER             : 127
CASE                 : 70
CHAR                 : 31 36 41
COMA                 : 43 87
COMILLAS             : 
COMMENTBLOCK         : 
CONSOLE              : 42
CONST                : 24
CONTINUE             : 105
CORCHETED            : 25 26 26 32 33 34 35 36 45 46 52 90 130 131 131 133
CORCHETEI            : 25 26 26 32 33 34 35 36 45 46 52 90 130 131 131 133
DECIMAL              : 123
DECREMENTO           : 55
DECREMENTOFOR        : 64
DEFAULT              : 71
DIFERENTE            : 117
DIVIDIDO             : 110
DOSPUNTOS            : 48 50 70 71 89 90 95 96 98 99
ELSE                 : 58 60 62
ENTERO               : 122
FALSE                : 124
FLOAT                : 28 33 38
FOR                  : 65 66
FUNCTION             : 93 94 95 96
ID                   : 48 49 50 51 52 53 54 55 63 64 66 66 89 90 91 92 93 94 95 96 97 98 99 128 132 133
IF                   : 59 60 61 62
IGUAL                : 48 49 51 52 53 100
IGUALIGUAL           : 116
INCREMENTOFOR        : 63
INDEXOF              : 80
INTERFACE            : 97
JOIN                 : 74
LC                   : 76
LENGTH               : 78
LET                  : 22
LLAVED               : 59 60 60 61 62 62 65 66 67 72 93 94 95 96 97
LLAVEI               : 59 60 60 61 62 62 65 66 67 72 93 94 95 96 97
LOG                  : 42
MAS                  : 107
MAYORIGUALQ          : 114
MAYORQ               : 113
MENORIGUALQ          : 115
MENORQ               : 112
MENOS                : 108 134
MOD                  : 111
NOT                  : 120
NULL                 : 
NUMBER               : 27 32 37
OF                   : 66
OR                   : 119
PAREND               : 42 59 60 61 62 65 66 67 72 73 74 75 76 77 82 85 86 91 92 93 94 95 96 121
PARENI               : 42 59 60 61 62 65 66 67 72 73 74 75 76 77 82 85 86 91 92 93 94 95 96 121
POP                  : 73
POR                  : 109
PUNTO                : 42 81 82 100 101
PUNTOCOMA            : 4 5 6 14 16 65 65 97 98 100 102 103 104 105
PUSH                 : 79
RETURN               : 102 103
STRING               : 29 34 39
SWITCH               : 72
TOFLOAT              : 86
TOINT                : 85
TRUE                 : 125
TSTRING              : 75
TYPEOF               : 83
UC                   : 77
VACIO                : 129
VAR                  : 23
WHILE                : 67
error                : 

Nonterminals, with rules where they appear

actualizacion        : 65
arraylist            : 47
asignacion           : 6
break_instr          : 20
call_funcion_instr   : 16 106
case                 : 68 69
continue_instr       : 21
declaracion          : 5 65
delaracion_struct    : 18
elseIF               : 56 57
expresion            : 43 44 48 49 51 52 52 53 54 55 59 60 61 62 65 67 70 72 81 82 83 85 86 100 100 100 101 101 102 107 107 108 108 109 109 110 110 111 111 112 112 113 113 114 114 115 115 116 116 117 117 118 118 119 119 120 121 130 131 131 133 134
for_instr            : 11
funcion_instr        : 15
if_else_instr        : 8
if_elseif_else_instr : 10
if_elseif_instr      : 9
if_instr             : 7 58
imprimir             : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 59 60 60 61 62 62 65 66 67 70 71 93 94 95 96
interface_instr      : 17
interface_params     : 97 98
listaCases           : 68 72
listaExpresiones     : 42 43 45 82 92
listaIf              : 56 61 62
lista_corchetes      : 25 37 38 39 40 41
llamada_funcion_nativa : 14 82 84
nativa_sin_parametros : 81
parametro_funcion    : 87 88
parametros_funcion   : 87 93 95
pos_matriz           : 53 130 132
return_instr         : 19
switch_instr         : 13
tipodeclaracion      : 48 49 50 66
tipovar              : 48 50 89 90 95 96 98 99
while_instr          : 12

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir PUNTOCOMA
    (5) instruccion -> . declaracion PUNTOCOMA
    (6) instruccion -> . asignacion PUNTOCOMA
    (7) instruccion -> . if_instr
    (8) instruccion -> . if_else_instr
    (9) instruccion -> . if_elseif_instr
    (10) instruccion -> . if_elseif_else_instr
    (11) instruccion -> . for_instr
    (12) instruccion -> . while_instr
    (13) instruccion -> . switch_instr
    (14) instruccion -> . llamada_funcion_nativa PUNTOCOMA
    (15) instruccion -> . funcion_instr
    (16) instruccion -> . call_funcion_instr PUNTOCOMA
    (17) instruccion -> . interface_instr
    (18) instruccion -> . delaracion_struct
    (19) instruccion -> . return_instr
    (20) instruccion -> . break_instr
    (21) instruccion -> . continue_instr
    (42) imprimir -> . CONSOLE PUNTO LOG PARENI listaExpresiones PAREND
    (48) declaracion -> . tipodeclaracion ID DOSPUNTOS tipovar IGUAL expresion
    (49) declaracion -> . tipodeclaracion ID IGUAL expresion
    (50) declaracion -> . tipodeclaracion ID DOSPUNTOS tipovar
    (51) asignacion -> . ID IGUAL expresion
    (52) asignacion -> . ID CORCHETEI expresion CORCHETED IGUAL expresion
    (53) asignacion -> . ID pos_matriz IGUAL expresion
    (54) asignacion -> . ID AUMENTO expresion
    (55) asignacion -> . ID DECREMENTO expresion
    (59) if_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED
    (60) if_else_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED ELSE LLAVEI instrucciones LLAVED
    (61) if_elseif_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED listaIf
    (62) if_elseif_else_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED listaIf ELSE LLAVEI instrucciones LLAVED
    (65) for_instr -> . FOR PARENI declaracion PUNTOCOMA expresion PUNTOCOMA actualizacion PAREND LLAVEI instrucciones LLAVED
    (66) for_instr -> . FOR PARENI tipodeclaracion ID OF ID PAREND LLAVEI instrucciones LLAVED
    (67) while_instr -> . WHILE PARENI expresion PAREND LLAVEI instrucciones LLAVED
    (72) switch_instr -> . SWITCH PARENI expresion PAREND LLAVEI listaCases LLAVED
    (79) llamada_funcion_nativa -> . PUSH
    (80) llamada_funcion_nativa -> . INDEXOF
    (81) llamada_funcion_nativa -> . expresion PUNTO nativa_sin_parametros
    (82) llamada_funcion_nativa -> . expresion PUNTO llamada_funcion_nativa PARENI listaExpresiones PAREND
    (83) llamada_funcion_nativa -> . TYPEOF expresion
    (93) funcion_instr -> . FUNCTION ID PARENI parametros_funcion PAREND LLAVEI instrucciones LLAVED
    (94) funcion_instr -> . FUNCTION ID PARENI PAREND LLAVEI instrucciones LLAVED
    (95) funcion_instr -> . FUNCTION ID PARENI parametros_funcion PAREND DOSPUNTOS tipovar LLAVEI instrucciones LLAVED
    (96) funcion_instr -> . FUNCTION ID PARENI PAREND DOSPUNTOS tipovar LLAVEI instrucciones LLAVED
    (91) call_funcion_instr -> . ID PARENI PAREND
    (92) call_funcion_instr -> . ID PARENI listaExpresiones PAREND
    (97) interface_instr -> . INTERFACE ID LLAVEI interface_params PUNTOCOMA LLAVED
    (100) delaracion_struct -> . expresion PUNTO expresion IGUAL expresion PUNTOCOMA
    (102) return_instr -> . RETURN expresion PUNTOCOMA
    (103) return_instr -> . RETURN PUNTOCOMA
    (104) break_instr -> . BREAK PUNTOCOMA
    (105) continue_instr -> . CONTINUE PUNTOCOMA
    (22) tipodeclaracion -> . LET
    (23) tipodeclaracion -> . VAR
    (24) tipodeclaracion -> . CONST
    (47) expresion -> . arraylist
    (84) expresion -> . llamada_funcion_nativa
    (85) expresion -> . TOINT PARENI expresion PAREND
    (86) expresion -> . TOFLOAT PARENI expresion PAREND
    (101) expresion -> . expresion PUNTO expresion
    (106) expresion -> . call_funcion_instr
    (107) expresion -> . expresion MAS expresion
    (108) expresion -> . expresion MENOS expresion
    (109) expresion -> . expresion POR expresion
    (110) expresion -> . expresion DIVIDIDO expresion
    (111) expresion -> . expresion MOD expresion
    (112) expresion -> . expresion MENORQ expresion
    (113) expresion -> . expresion MAYORQ expresion
    (114) expresion -> . expresion MAYORIGUALQ expresion
    (115) expresion -> . expresion MENORIGUALQ expresion
    (116) expresion -> . expresion IGUALIGUAL expresion
    (117) expresion -> . expresion DIFERENTE expresion
    (118) expresion -> . expresion AND expresion
    (119) expresion -> . expresion OR expresion
    (120) expresion -> . NOT expresion
    (121) expresion -> . PARENI expresion PAREND
    (122) expresion -> . ENTERO
    (123) expresion -> . DECIMAL
    (124) expresion -> . FALSE
    (125) expresion -> . TRUE
    (126) expresion -> . CADENA
    (127) expresion -> . CARACTER
    (128) expresion -> . ID
    (129) expresion -> . VACIO
    (132) expresion -> . ID pos_matriz
    (133) expresion -> . ID CORCHETEI expresion CORCHETED
    (134) expresion -> . MENOS expresion
    (45) arraylist -> . CORCHETEI listaExpresiones CORCHETED
    (46) arraylist -> . CORCHETEI CORCHETED

    CONSOLE         shift and go to state 22
    ID              shift and go to state 25
    IF              shift and go to state 28
    FOR             shift and go to state 29
    WHILE           shift and go to state 30
    SWITCH          shift and go to state 31
    PUSH            shift and go to state 32
    INDEXOF         shift and go to state 33
    TYPEOF          shift and go to state 34
    FUNCTION        shift and go to state 35
    INTERFACE       shift and go to state 36
    RETURN          shift and go to state 37
    BREAK           shift and go to state 38
    CONTINUE        shift and go to state 39
    LET             shift and go to state 40
    VAR             shift and go to state 41
    CONST           shift and go to state 42
    TOINT           shift and go to state 44
    TOFLOAT         shift and go to state 45
    NOT             shift and go to state 47
    PARENI          shift and go to state 23
    ENTERO          shift and go to state 48
    DECIMAL         shift and go to state 49
    FALSE           shift and go to state 50
    TRUE            shift and go to state 51
    CADENA          shift and go to state 52
    CARACTER        shift and go to state 53
    VACIO           shift and go to state 54
    MENOS           shift and go to state 46
    CORCHETEI       shift and go to state 27

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir                       shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    if_instr                       shift and go to state 7
    if_else_instr                  shift and go to state 8
    if_elseif_instr                shift and go to state 9
    if_elseif_else_instr           shift and go to state 10
    for_instr                      shift and go to state 11
    while_instr                    shift and go to state 12
    switch_instr                   shift and go to state 13
    llamada_funcion_nativa         shift and go to state 14
    funcion_instr                  shift and go to state 15
    call_funcion_instr             shift and go to state 16
    interface_instr                shift and go to state 17
    delaracion_struct              shift and go to state 18
    return_instr                   shift and go to state 19
    break_instr                    shift and go to state 20
    continue_instr                 shift and go to state 21
    tipodeclaracion                shift and go to state 24
    expresion                      shift and go to state 26
    arraylist                      shift and go to state 43

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir PUNTOCOMA
    (5) instruccion -> . declaracion PUNTOCOMA
    (6) instruccion -> . asignacion PUNTOCOMA
    (7) instruccion -> . if_instr
    (8) instruccion -> . if_else_instr
    (9) instruccion -> . if_elseif_instr
    (10) instruccion -> . if_elseif_else_instr
    (11) instruccion -> . for_instr
    (12) instruccion -> . while_instr
    (13) instruccion -> . switch_instr
    (14) instruccion -> . llamada_funcion_nativa PUNTOCOMA
    (15) instruccion -> . funcion_instr
    (16) instruccion -> . call_funcion_instr PUNTOCOMA
    (17) instruccion -> . interface_instr
    (18) instruccion -> . delaracion_struct
    (19) instruccion -> . return_instr
    (20) instruccion -> . break_instr
    (21) instruccion -> . continue_instr
    (42) imprimir -> . CONSOLE PUNTO LOG PARENI listaExpresiones PAREND
    (48) declaracion -> . tipodeclaracion ID DOSPUNTOS tipovar IGUAL expresion
    (49) declaracion -> . tipodeclaracion ID IGUAL expresion
    (50) declaracion -> . tipodeclaracion ID DOSPUNTOS tipovar
    (51) asignacion -> . ID IGUAL expresion
    (52) asignacion -> . ID CORCHETEI expresion CORCHETED IGUAL expresion
    (53) asignacion -> . ID pos_matriz IGUAL expresion
    (54) asignacion -> . ID AUMENTO expresion
    (55) asignacion -> . ID DECREMENTO expresion
    (59) if_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED
    (60) if_else_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED ELSE LLAVEI instrucciones LLAVED
    (61) if_elseif_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED listaIf
    (62) if_elseif_else_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED listaIf ELSE LLAVEI instrucciones LLAVED
    (65) for_instr -> . FOR PARENI declaracion PUNTOCOMA expresion PUNTOCOMA actualizacion PAREND LLAVEI instrucciones LLAVED
    (66) for_instr -> . FOR PARENI tipodeclaracion ID OF ID PAREND LLAVEI instrucciones LLAVED
    (67) while_instr -> . WHILE PARENI expresion PAREND LLAVEI instrucciones LLAVED
    (72) switch_instr -> . SWITCH PARENI expresion PAREND LLAVEI listaCases LLAVED
    (79) llamada_funcion_nativa -> . PUSH
    (80) llamada_funcion_nativa -> . INDEXOF
    (81) llamada_funcion_nativa -> . expresion PUNTO nativa_sin_parametros
    (82) llamada_funcion_nativa -> . expresion PUNTO llamada_funcion_nativa PARENI listaExpresiones PAREND
    (83) llamada_funcion_nativa -> . TYPEOF expresion
    (93) funcion_instr -> . FUNCTION ID PARENI parametros_funcion PAREND LLAVEI instrucciones LLAVED
    (94) funcion_instr -> . FUNCTION ID PARENI PAREND LLAVEI instrucciones LLAVED
    (95) funcion_instr -> . FUNCTION ID PARENI parametros_funcion PAREND DOSPUNTOS tipovar LLAVEI instrucciones LLAVED
    (96) funcion_instr -> . FUNCTION ID PARENI PAREND DOSPUNTOS tipovar LLAVEI instrucciones LLAVED
    (91) call_funcion_instr -> . ID PARENI PAREND
    (92) call_funcion_instr -> . ID PARENI listaExpresiones PAREND
    (97) interface_instr -> . INTERFACE ID LLAVEI interface_params PUNTOCOMA LLAVED
    (100) delaracion_struct -> . expresion PUNTO expresion IGUAL expresion PUNTOCOMA
    (102) return_instr -> . RETURN expresion PUNTOCOMA
    (103) return_instr -> . RETURN PUNTOCOMA
    (104) break_instr -> . BREAK PUNTOCOMA
    (105) continue_instr -> . CONTINUE PUNTOCOMA
    (22) tipodeclaracion -> . LET
    (23) tipodeclaracion -> . VAR
    (24) tipodeclaracion -> . CONST
    (47) expresion -> . arraylist
    (84) expresion -> . llamada_funcion_nativa
    (85) expresion -> . TOINT PARENI expresion PAREND
    (86) expresion -> . TOFLOAT PARENI expresion PAREND
    (101) expresion -> . expresion PUNTO expresion
    (106) expresion -> . call_funcion_instr
    (107) expresion -> . expresion MAS expresion
    (108) expresion -> . expresion MENOS expresion
    (109) expresion -> . expresion POR expresion
    (110) expresion -> . expresion DIVIDIDO expresion
    (111) expresion -> . expresion MOD expresion
    (112) expresion -> . expresion MENORQ expresion
    (113) expresion -> . expresion MAYORQ expresion
    (114) expresion -> . expresion MAYORIGUALQ expresion
    (115) expresion -> . expresion MENORIGUALQ expresion
    (116) expresion -> . expresion IGUALIGUAL expresion
    (117) expresion -> . expresion DIFERENTE expresion
    (118) expresion -> . expresion AND expresion
    (119) expresion -> . expresion OR expresion
    (120) expresion -> . NOT expresion
    (121) expresion -> . PARENI expresion PAREND
    (122) expresion -> . ENTERO
    (123) expresion -> . DECIMAL
    (124) expresion -> . FALSE
    (125) expresion -> . TRUE
    (126) expresion -> . CADENA
    (127) expresion -> . CARACTER
    (128) expresion -> . ID
    (129) expresion -> . VACIO
    (132) expresion -> . ID pos_matriz
    (133) expresion -> . ID CORCHETEI expresion CORCHETED
    (134) expresion -> . MENOS expresion
    (45) arraylist -> . CORCHETEI listaExpresiones CORCHETED
    (46) arraylist -> . CORCHETEI CORCHETED

    $end            reduce using rule 1 (init -> instrucciones .)
    CONSOLE         shift and go to state 22
    ID              shift and go to state 25
    IF              shift and go to state 28
    FOR             shift and go to state 29
    WHILE           shift and go to state 30
    SWITCH          shift and go to state 31
    PUSH            shift and go to state 32
    INDEXOF         shift and go to state 33
    TYPEOF          shift and go to state 34
    FUNCTION        shift and go to state 35
    INTERFACE       shift and go to state 36
    RETURN          shift and go to state 37
    BREAK           shift and go to state 38
    CONTINUE        shift and go to state 39
    LET             shift and go to state 40
    VAR             shift and go to state 41
    CONST           shift and go to state 42
    TOINT           shift and go to state 44
    TOFLOAT         shift and go to state 45
    NOT             shift and go to state 47
    PARENI          shift and go to state 23
    ENTERO          shift and go to state 48
    DECIMAL         shift and go to state 49
    FALSE           shift and go to state 50
    TRUE            shift and go to state 51
    CADENA          shift and go to state 52
    CARACTER        shift and go to state 53
    VACIO           shift and go to state 54
    MENOS           shift and go to state 46
    CORCHETEI       shift and go to state 27

    instruccion                    shift and go to state 55
    imprimir                       shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    if_instr                       shift and go to state 7
    if_else_instr                  shift and go to state 8
    if_elseif_instr                shift and go to state 9
    if_elseif_else_instr           shift and go to state 10
    for_instr                      shift and go to state 11
    while_instr                    shift and go to state 12
    switch_instr                   shift and go to state 13
    llamada_funcion_nativa         shift and go to state 14
    funcion_instr                  shift and go to state 15
    call_funcion_instr             shift and go to state 16
    interface_instr                shift and go to state 17
    delaracion_struct              shift and go to state 18
    return_instr                   shift and go to state 19
    break_instr                    shift and go to state 20
    continue_instr                 shift and go to state 21
    tipodeclaracion                shift and go to state 24
    expresion                      shift and go to state 26
    arraylist                      shift and go to state 43

state 3

    (3) instrucciones -> instruccion .

    CONSOLE         reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    SWITCH          reduce using rule 3 (instrucciones -> instruccion .)
    PUSH            reduce using rule 3 (instrucciones -> instruccion .)
    INDEXOF         reduce using rule 3 (instrucciones -> instruccion .)
    TYPEOF          reduce using rule 3 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 3 (instrucciones -> instruccion .)
    INTERFACE       reduce using rule 3 (instrucciones -> instruccion .)
    RETURN          reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 3 (instrucciones -> instruccion .)
    LET             reduce using rule 3 (instrucciones -> instruccion .)
    VAR             reduce using rule 3 (instrucciones -> instruccion .)
    CONST           reduce using rule 3 (instrucciones -> instruccion .)
    TOINT           reduce using rule 3 (instrucciones -> instruccion .)
    TOFLOAT         reduce using rule 3 (instrucciones -> instruccion .)
    NOT             reduce using rule 3 (instrucciones -> instruccion .)
    PARENI          reduce using rule 3 (instrucciones -> instruccion .)
    ENTERO          reduce using rule 3 (instrucciones -> instruccion .)
    DECIMAL         reduce using rule 3 (instrucciones -> instruccion .)
    FALSE           reduce using rule 3 (instrucciones -> instruccion .)
    TRUE            reduce using rule 3 (instrucciones -> instruccion .)
    CADENA          reduce using rule 3 (instrucciones -> instruccion .)
    CARACTER        reduce using rule 3 (instrucciones -> instruccion .)
    VACIO           reduce using rule 3 (instrucciones -> instruccion .)
    MENOS           reduce using rule 3 (instrucciones -> instruccion .)
    CORCHETEI       reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVED          reduce using rule 3 (instrucciones -> instruccion .)
    CASE            reduce using rule 3 (instrucciones -> instruccion .)
    DEFAULT         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir . PUNTOCOMA

    PUNTOCOMA       shift and go to state 56


state 5

    (5) instruccion -> declaracion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 57


state 6

    (6) instruccion -> asignacion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 58


state 7

    (7) instruccion -> if_instr .

    CONSOLE         reduce using rule 7 (instruccion -> if_instr .)
    ID              reduce using rule 7 (instruccion -> if_instr .)
    IF              reduce using rule 7 (instruccion -> if_instr .)
    FOR             reduce using rule 7 (instruccion -> if_instr .)
    WHILE           reduce using rule 7 (instruccion -> if_instr .)
    SWITCH          reduce using rule 7 (instruccion -> if_instr .)
    PUSH            reduce using rule 7 (instruccion -> if_instr .)
    INDEXOF         reduce using rule 7 (instruccion -> if_instr .)
    TYPEOF          reduce using rule 7 (instruccion -> if_instr .)
    FUNCTION        reduce using rule 7 (instruccion -> if_instr .)
    INTERFACE       reduce using rule 7 (instruccion -> if_instr .)
    RETURN          reduce using rule 7 (instruccion -> if_instr .)
    BREAK           reduce using rule 7 (instruccion -> if_instr .)
    CONTINUE        reduce using rule 7 (instruccion -> if_instr .)
    LET             reduce using rule 7 (instruccion -> if_instr .)
    VAR             reduce using rule 7 (instruccion -> if_instr .)
    CONST           reduce using rule 7 (instruccion -> if_instr .)
    TOINT           reduce using rule 7 (instruccion -> if_instr .)
    TOFLOAT         reduce using rule 7 (instruccion -> if_instr .)
    NOT             reduce using rule 7 (instruccion -> if_instr .)
    PARENI          reduce using rule 7 (instruccion -> if_instr .)
    ENTERO          reduce using rule 7 (instruccion -> if_instr .)
    DECIMAL         reduce using rule 7 (instruccion -> if_instr .)
    FALSE           reduce using rule 7 (instruccion -> if_instr .)
    TRUE            reduce using rule 7 (instruccion -> if_instr .)
    CADENA          reduce using rule 7 (instruccion -> if_instr .)
    CARACTER        reduce using rule 7 (instruccion -> if_instr .)
    VACIO           reduce using rule 7 (instruccion -> if_instr .)
    MENOS           reduce using rule 7 (instruccion -> if_instr .)
    CORCHETEI       reduce using rule 7 (instruccion -> if_instr .)
    $end            reduce using rule 7 (instruccion -> if_instr .)
    LLAVED          reduce using rule 7 (instruccion -> if_instr .)
    CASE            reduce using rule 7 (instruccion -> if_instr .)
    DEFAULT         reduce using rule 7 (instruccion -> if_instr .)


state 8

    (8) instruccion -> if_else_instr .
